<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.isofocus.casillas.MainActivity"
    tools:showIn="@layout/activity_main">

    <SeekBar
        android:id="@+id/seekX"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <SeekBar
        android:id="@+id/seekY"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="0.137" />

    <SeekBar
        android:id="@+id/seekPlots"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:max="5"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="0.208" />


    <TextView
        android:id="@+id/textViewX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementsX"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementsY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textViewPlots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.174" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        android:layout_marginEnd="260dp">

        <RadioButton
            android:id="@+id/radioButtonColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintVertical_bias="0.386" />

    <CheckBox
        android:id="@+id/checkBoxVibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintVertical_bias="0.386" />


    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />


</android.support.constraint.ConstraintLayout>
